Re-create TLW's window only when its surface type is really changed

Fixes: QTBUG-105017
Change-Id: If5826172efb53b6df15dd3b7ba91b09d733cc77f
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit a4a51f6a641f4bf0a863251d6d3e026d81de6280)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>